modification des .css pour que ça soit plus adapté aux grand écrans

--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -19,6 +19,7 @@ body, html {
     animation: fadeIn 1s ease-out;
     width: 100%;
     overflow: hidden; /* Pour cacher les lignes qui sortent du conteneur */
+    min-height: 91vh;
 }
 
 .presentation{
