--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -67,17 +67,16 @@ body, html {
     display: flex;
     justify-content: space-around;
     align-items: stretch; /* Assure que les éléments enfants prennent la même hauteur */
-    width: 95%;
-    max-width: 95% !important; /* Surcharge les styles Bootstrap */
+    min-width: 95%; /* Surcharge les styles Bootstrap */
 }
 
 .quiSuisJe, .mesObjectifs {
     background-color: #121212; /* Couleur de fond sombre */
     color: #ffffff; /* Couleur du texte blanche */
-    width: 45% !important;
-    display: flex !important;
-    flex-direction: column !important;
-    justify-content: center !important; /* Centrer le contenu verticalement */
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centrer le contenu verticalement */
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2); /* Blanc */
@@ -140,5 +139,56 @@ body, html {
     to {
         transform: translateX(0);
         opacity: 1;
+    }
+}
+
+
+/* Media queries pour les écrans plus petits */
+@media (max-width: 880px) {
+    .presentation {
+      flex-direction: column;
+      width: 65%;
+    }
+  
+    .picture {
+      width: 120px;
+      height: 120px;
+    }
+  
+    .containerHome {
+      padding: 10px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .quiSuisJe, .mesObjectifs {
+      margin-bottom: 15px;
+      min-width: 80%;
+    }
+}
+  
+@media (max-width: 500px) {
+    .presentation {
+        width: 70%;
+      }
+
+    .lines{
+        display: none;
+    }
+
+    .picture {
+        width: 100px;
+        height: 100px;
+    }
+
+    .containerHome {
+        padding: 5px;
+        min-width: 100%;
+    }
+
+    .quiSuisJe, .mesObjectifs {
+        margin-bottom: 10px;
+        min-width: 90%;
     }
 }
